--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -3,7 +3,7 @@
   "DefaultConnection": "Server=AMY\\SQLEXPRESS;Database=ShinekaDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Jwt": {
-    "Key": "ThisIsASecretKeyThatIsMoreThan32CharsLong!!",
+    "Key": "88196c091c8d645a2a221c5f612d13d3a41593c9b8894113",
     "Issuer": "Taskmanagement.com",
     "Audience": "Taskmanagement.com"
   },
